# sigpi

./: .gitignore  README.md  SPEC_sigpi.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml  run_tests.sh
backend/apps/accounts/: admin.py  apps.py  audit.py  backends.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_seed_roles.py  0003_audit_event.py  0004_rls_policies.py
backend/apps/accounts/tests/: test_api_endpoints.py  test_audit.py  test_audit_integration.py  test_backends.py  test_config.py  test_managers.py  test_middleware.py  test_models.py  test_permissions.py  test_rls.py  test_tasks.py  (+1 more)
backend/apps/institutions/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/progress/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/projects/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/reports/: __init__.py  admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/researchers/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/middleware/: __init__.py  tenant.py
backend/config/settings/: base.py
(+146 files in other folders)
