[project]
name = "sigpi-backend"
version = "0.1.0"
description = "SIGPI — Sistema de Información para la Gestión de Proyectos de Investigación"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "psycopg2-binary>=2.9",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "mozilla-django-oidc>=4.0",
    "django-allauth>=0.63",
    "django-ratelimit>=4.1",
    "django-fsm>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "factory-boy>=3.3",
    "responses>=0.25",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.base"
pythonpath = ["backend"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
testpaths = ["backend"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = []
